; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_ib_rdma.c_rds_ib_update_ipaddr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_ib_rdma.c_rds_ib_update_ipaddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_ib_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rds_ib_update_ipaddr(%struct.rds_ib_device* %0, i32 %1) #0 {
  %3 = alloca %struct.rds_ib_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.rds_ib_device*, align 8
  store %struct.rds_ib_device* %0, %struct.rds_ib_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call %struct.rds_ib_device* @rds_ib_get_device(i32 %6)
  store %struct.rds_ib_device* %7, %struct.rds_ib_device** %5, align 8
  %8 = load %struct.rds_ib_device*, %struct.rds_ib_device** %5, align 8
  %9 = icmp ne %struct.rds_ib_device* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.rds_ib_device*, %struct.rds_ib_device** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @rds_ib_remove_ipaddr(%struct.rds_ib_device* %11, i32 %12)
  %14 = load %struct.rds_ib_device*, %struct.rds_ib_device** %5, align 8
  %15 = call i32 @rds_ib_dev_put(%struct.rds_ib_device* %14)
  br label %16

16:                                               ; preds = %10, %2
  %17 = load %struct.rds_ib_device*, %struct.rds_ib_device** %3, align 8
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @rds_ib_add_ipaddr(%struct.rds_ib_device* %17, i32 %18)
  ret i32 %19
}

declare dso_local %struct.rds_ib_device* @rds_ib_get_device(i32) #1

declare dso_local i32 @rds_ib_remove_ipaddr(%struct.rds_ib_device*, i32) #1

declare dso_local i32 @rds_ib_dev_put(%struct.rds_ib_device*) #1

declare dso_local i32 @rds_ib_add_ipaddr(%struct.rds_ib_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
